--- a/styles.css
+++ b/styles.css
@@ -24,13 +24,12 @@ h1{
 
 .main{
     display: flex;
-    align-items: end;
-    justify-content: end;
+    align-items: center;
+    justify-content: center;
     flex-wrap: wrap;
 }
 
 .container{
-    margin-left: 17vw;
     display: flex;
     background-color: mediumaquamarine;
     width: 60vw;
@@ -40,30 +39,12 @@ h1{
     justify-content: space-around;
 }
 
-.sumasrows{
-    display: flex;
-    flex-wrap: wrap;
-    margin-right: 0px;
-    border-radius: 30px;
-    width: 20vw;
-    height: 60vw;
-}
-
-.sumasbottom{
-    display: flex;
-    justify-content: space-around;
-    border-radius: 30px;
-    height: 20vw;
-    width: 20vw;
-    width: 100vw;
-}
-
 .numberitem{
-    background-color: white;
+    background-color: rgb(139, 231, 200);
     margin: auto;
-    border-radius: 10px;
-    width: 16vw;
-    height: 16vw;
+    border-radius: 30%;
+    width: 14vw;
+    height: 14vw;
     font-family: Arial, Helvetica, sans-serif;
     align-content: center;
     text-align: center;
@@ -72,8 +53,12 @@ h1{
     transition: background-color 0.2s ease, transform 0.2s ease;
 }
 
+.whiteSpace{
+    background-color: white;
+}
+
 .clickable {
-    background-color: mediumspringgreen;
+    background-color: rgb(92, 235, 181);
     cursor:pointer;
 }
 
